# qmkui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci-deploy.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.test.ts  vite.config.ts
apps/desktop/src/: advancedAssignments.test.ts  advancedAssignments.ts  buildPlan.test.ts  buildPlan.ts  doctorReport.test.ts  doctorReport.ts  domain.test.ts  domain.ts  keyDetails.test.ts  keyDetails.ts  keyTester.test.ts  keyTester.ts  keycodes.test.ts  keycodes.ts  layerActions.test.ts  layerActions.ts  lightingCapabilities.test.ts  lightingCapabilities.ts  main.test.ts  main.ts  presets.ts  projectFactory.test.ts  projectFactory.ts  projectStorage.test.ts  projectStorage.ts  qmkMetadata.test.ts  qmkMetadata.ts  safety.test.ts  safety.ts  safetyStorage.test.ts  safetyStorage.ts  styles.css  ui.layout.test.ts  ui.test.ts  ui.ts
apps/desktop/src/devices/: browserKeyboardDiscovery.test.ts  (+9 more)
crates/qmkui-catalog/: Cargo.toml
crates/qmkui-catalog/src/: lib.rs
crates/qmkui-core/: Cargo.toml
crates/qmkui-core/src/: lib.rs  model.rs  qmk_json.rs  validation.rs
crates/qmkui-core/tests/: project_validation.rs
crates/qmkui-doctor/: Cargo.toml
crates/qmkui-doctor/src/: lib.rs  main.rs
fixtures/catalog/: keyboards.json
fixtures/projects/: example-60.json
packaging/arch/: PKGBUILD  README.md
scripts/: audit-public-build.sh  probe-read-only.sh  test-public-build-audit.sh  test-public-packaging.sh  test-software.sh
