[workspace]
members = [
    "crates/qmkui-core",
    "crates/qmkui-catalog",
    "crates/qmkui-doctor",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Cordtus/qmkui"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
